--- a/Panda_Combine.ipynb
+++ b/Panda_Combine.ipynb
@@ -1628,12 +1628,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_combine = pd.merge(Crime_data_trunc,clinical_data, how='left', on=[\"District\", \"District\"])"
+    "# data_combine = pd.merge(Crime_data_trunc,clinical_data, how='left', on=[\"District\", \"District\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
