--- a/Panda_Combine.ipynb
+++ b/Panda_Combine.ipynb
@@ -86,218 +86,26 @@
        "      <td>-71.060300</td>\n",
        "      <td>(42.30682138, -71.06030035)</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>I182070941</td>\n",
-       "      <td>3410</td>\n",
-       "      <td>Towed</td>\n",
-       "      <td>TOWED MOTOR VEHICLE</td>\n",
-       "      <td>D4</td>\n",
-       "      <td>151</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9/3/2018 19:27</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>19</td>\n",
-       "      <td>Part Three</td>\n",
-       "      <td>CAZENOVE ST</td>\n",
-       "      <td>42.346589</td>\n",
-       "      <td>-71.072429</td>\n",
-       "      <td>(42.34658879, -71.07242943)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>I182070940</td>\n",
-       "      <td>3114</td>\n",
-       "      <td>Investigate Property</td>\n",
-       "      <td>INVESTIGATE PROPERTY</td>\n",
-       "      <td>D4</td>\n",
-       "      <td>272</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9/3/2018 21:16</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Part Three</td>\n",
-       "      <td>NEWCOMB ST</td>\n",
-       "      <td>42.334182</td>\n",
-       "      <td>-71.078664</td>\n",
-       "      <td>(42.33418175, -71.07866441)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>I182070938</td>\n",
-       "      <td>3114</td>\n",
-       "      <td>Investigate Property</td>\n",
-       "      <td>INVESTIGATE PROPERTY</td>\n",
-       "      <td>B3</td>\n",
-       "      <td>421</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9/3/2018 21:05</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Part Three</td>\n",
-       "      <td>DELHI ST</td>\n",
-       "      <td>42.275365</td>\n",
-       "      <td>-71.090361</td>\n",
-       "      <td>(42.27536542, -71.09036101)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>I182070936</td>\n",
-       "      <td>3820</td>\n",
-       "      <td>Motor Vehicle Accident Response</td>\n",
-       "      <td>M/V ACCIDENT INVOLVING PEDESTRIAN - INJURY</td>\n",
-       "      <td>C11</td>\n",
-       "      <td>398</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9/3/2018 21:09</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Part Three</td>\n",
-       "      <td>TALBOT AVE</td>\n",
-       "      <td>42.290196</td>\n",
-       "      <td>-71.071590</td>\n",
-       "      <td>(42.29019621, -71.07159012)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>I182070933</td>\n",
-       "      <td>724</td>\n",
-       "      <td>Auto Theft</td>\n",
-       "      <td>AUTO THEFT</td>\n",
-       "      <td>B2</td>\n",
-       "      <td>330</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9/3/2018 21:25</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Part One</td>\n",
-       "      <td>NORMANDY ST</td>\n",
-       "      <td>42.306072</td>\n",
-       "      <td>-71.082733</td>\n",
-       "      <td>(42.30607218, -71.08273260)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>I182070932</td>\n",
-       "      <td>3301</td>\n",
-       "      <td>Verbal Disputes</td>\n",
-       "      <td>VERBAL DISPUTE</td>\n",
-       "      <td>B2</td>\n",
-       "      <td>584</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9/3/2018 20:39</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Part Three</td>\n",
-       "      <td>LAWN ST</td>\n",
-       "      <td>42.327016</td>\n",
-       "      <td>-71.105551</td>\n",
-       "      <td>(42.32701648, -71.10555088)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>I182070931</td>\n",
-       "      <td>301</td>\n",
-       "      <td>Robbery</td>\n",
-       "      <td>ROBBERY - STREET</td>\n",
-       "      <td>C6</td>\n",
-       "      <td>177</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9/3/2018 20:48</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Part One</td>\n",
-       "      <td>MASSACHUSETTS AVE</td>\n",
-       "      <td>42.331521</td>\n",
-       "      <td>-71.070853</td>\n",
-       "      <td>(42.33152148, -71.07085307)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>I182070929</td>\n",
-       "      <td>3301</td>\n",
-       "      <td>Verbal Disputes</td>\n",
-       "      <td>VERBAL DISPUTE</td>\n",
-       "      <td>C11</td>\n",
-       "      <td>364</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9/3/2018 20:38</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Part Three</td>\n",
-       "      <td>LESLIE ST</td>\n",
-       "      <td>42.295147</td>\n",
-       "      <td>-71.058608</td>\n",
-       "      <td>(42.29514664, -71.05860832)</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  INCIDENT_NUMBER  OFFENSE_CODE               OFFENSE_CODE_GROUP  \\\n",
-       "0      I182070945           619                          Larceny   \n",
-       "1      I182070943          1402                        Vandalism   \n",
-       "2      I182070941          3410                            Towed   \n",
-       "3      I182070940          3114             Investigate Property   \n",
-       "4      I182070938          3114             Investigate Property   \n",
-       "5      I182070936          3820  Motor Vehicle Accident Response   \n",
-       "6      I182070933           724                       Auto Theft   \n",
-       "7      I182070932          3301                  Verbal Disputes   \n",
-       "8      I182070931           301                          Robbery   \n",
-       "9      I182070929          3301                  Verbal Disputes   \n",
+       "  INCIDENT_NUMBER  OFFENSE_CODE OFFENSE_CODE_GROUP OFFENSE_DESCRIPTION  \\\n",
+       "0      I182070945           619            Larceny  LARCENY ALL OTHERS   \n",
+       "1      I182070943          1402          Vandalism           VANDALISM   \n",
        "\n",
-       "                          OFFENSE_DESCRIPTION DISTRICT REPORTING_AREA  \\\n",
-       "0                          LARCENY ALL OTHERS      D14            808   \n",
-       "1                                   VANDALISM      C11            347   \n",
-       "2                         TOWED MOTOR VEHICLE       D4            151   \n",
-       "3                        INVESTIGATE PROPERTY       D4            272   \n",
-       "4                        INVESTIGATE PROPERTY       B3            421   \n",
-       "5  M/V ACCIDENT INVOLVING PEDESTRIAN - INJURY      C11            398   \n",
-       "6                                  AUTO THEFT       B2            330   \n",
-       "7                              VERBAL DISPUTE       B2            584   \n",
-       "8                            ROBBERY - STREET       C6            177   \n",
-       "9                              VERBAL DISPUTE      C11            364   \n",
+       "  DISTRICT REPORTING_AREA SHOOTING OCCURRED_ON_DATE  YEAR  MONTH DAY_OF_WEEK  \\\n",
+       "0      D14            808      NaN   9/2/2018 13:00  2018      9      Sunday   \n",
+       "1      C11            347      NaN   8/21/2018 0:00  2018      8     Tuesday   \n",
        "\n",
-       "  SHOOTING OCCURRED_ON_DATE  YEAR  MONTH DAY_OF_WEEK  HOUR    UCR_PART  \\\n",
-       "0      NaN   9/2/2018 13:00  2018      9      Sunday    13    Part One   \n",
-       "1      NaN   8/21/2018 0:00  2018      8     Tuesday     0    Part Two   \n",
-       "2      NaN   9/3/2018 19:27  2018      9      Monday    19  Part Three   \n",
-       "3      NaN   9/3/2018 21:16  2018      9      Monday    21  Part Three   \n",
-       "4      NaN   9/3/2018 21:05  2018      9      Monday    21  Part Three   \n",
-       "5      NaN   9/3/2018 21:09  2018      9      Monday    21  Part Three   \n",
-       "6      NaN   9/3/2018 21:25  2018      9      Monday    21    Part One   \n",
-       "7      NaN   9/3/2018 20:39  2018      9      Monday    20  Part Three   \n",
-       "8      NaN   9/3/2018 20:48  2018      9      Monday    20    Part One   \n",
-       "9      NaN   9/3/2018 20:38  2018      9      Monday    20  Part Three   \n",
+       "   HOUR  UCR_PART      STREET        Lat       Long  \\\n",
+       "0    13  Part One  LINCOLN ST  42.357791 -71.139371   \n",
+       "1     0  Part Two    HECLA ST  42.306821 -71.060300   \n",
        "\n",
-       "              STREET        Lat       Long                     Location  \n",
-       "0         LINCOLN ST  42.357791 -71.139371  (42.35779134, -71.13937053)  \n",
-       "1           HECLA ST  42.306821 -71.060300  (42.30682138, -71.06030035)  \n",
-       "2        CAZENOVE ST  42.346589 -71.072429  (42.34658879, -71.07242943)  \n",
-       "3         NEWCOMB ST  42.334182 -71.078664  (42.33418175, -71.07866441)  \n",
-       "4           DELHI ST  42.275365 -71.090361  (42.27536542, -71.09036101)  \n",
-       "5         TALBOT AVE  42.290196 -71.071590  (42.29019621, -71.07159012)  \n",
-       "6        NORMANDY ST  42.306072 -71.082733  (42.30607218, -71.08273260)  \n",
-       "7            LAWN ST  42.327016 -71.105551  (42.32701648, -71.10555088)  \n",
-       "8  MASSACHUSETTS AVE  42.331521 -71.070853  (42.33152148, -71.07085307)  \n",
-       "9          LESLIE ST  42.295147 -71.058608  (42.29514664, -71.05860832)  "
+       "                      Location  \n",
+       "0  (42.35779134, -71.13937053)  \n",
+       "1  (42.30682138, -71.06030035)  "
       ]
      },
      "execution_count": 2,
@@ -319,6 +127,7 @@
     "\n",
     "# File to Load (Remember to Change These)\n",
     "crime_data_to_load = \"data/Boston Crime Data.csv\"\n",
+    "zip_data_to_load = \"data/Boston Crime Data.csv\"\n",
     "\n",
     "# Read Data \n",
     "crime_data = pd.read_csv(crime_data_to_load)\n",
@@ -327,7 +136,7 @@
     "# Combine the data into a single dataset\n",
     "# data_combine = pd.merge(mouse_data,clinical_data, how='left', on=[\"Mouse ID\", \"Mouse ID\"])\n",
     "# Display the data table for preview\n",
-    "crime_data.head(10)\n"
+    "crime_data.head(2)\n"
    ]
   },
   {
