--- a/Panda_Combine.ipynb
+++ b/Panda_Combine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "1       2109   Boston"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
     }
    ],
    "source": [
-    "zip_data_to_load"
+    "crime_data.columns"
    ]
   },
   {
