--- a/Panda_Combine.ipynb
+++ b/Panda_Combine.ipynb
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -1159,73 +1159,73 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>A-7</td>\n",
+       "      <td>A7</td>\n",
        "      <td>69 Paris Street</td>\n",
        "      <td>East Boston</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>B-2</td>\n",
+       "      <td>B2</td>\n",
        "      <td>2400 Washington Street</td>\n",
        "      <td>Roxbury</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>B-3</td>\n",
+       "      <td>B3</td>\n",
        "      <td>1165 Blue Hill Avenue</td>\n",
        "      <td>Mattapan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>C-6</td>\n",
+       "      <td>C6</td>\n",
        "      <td>101 West Broadway</td>\n",
        "      <td>South Boston</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>C-11</td>\n",
+       "      <td>C11</td>\n",
        "      <td>40 Gibson Street</td>\n",
        "      <td>Dorchester</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>D-4</td>\n",
+       "      <td>D4</td>\n",
        "      <td>650 Harrison Avenue</td>\n",
        "      <td>Boston</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>D-14</td>\n",
+       "      <td>D14</td>\n",
        "      <td>301 Washington Street</td>\n",
        "      <td>Brighton</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>E-5</td>\n",
+       "      <td>E5</td>\n",
        "      <td>1708 Centre Street</td>\n",
        "      <td>West Roxbury</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>E-13</td>\n",
+       "      <td>E13</td>\n",
        "      <td>3347 Washington Street</td>\n",
        "      <td>Jamaica Plain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>E-18</td>\n",
+       "      <td>E18</td>\n",
        "      <td>1249 Hyde Park Avenue</td>\n",
        "      <td>Hyde Park</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>A-1</td>\n",
+       "      <td>A1</td>\n",
        "      <td>40 New Sudbury Street</td>\n",
        "      <td>Charlestown</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>A-15</td>\n",
+       "      <td>A15</td>\n",
        "      <td>40 New Sudbury Street</td>\n",
        "      <td>Boston</td>\n",
        "    </tr>\n",
@@ -1235,21 +1235,21 @@
       ],
       "text/plain": [
        "   District_Codes        District_Address        District\n",
-       "0             A-7         69 Paris Street     East Boston\n",
-       "1             B-2  2400 Washington Street         Roxbury\n",
-       "2             B-3   1165 Blue Hill Avenue        Mattapan\n",
-       "3             C-6       101 West Broadway    South Boston\n",
-       "4            C-11        40 Gibson Street      Dorchester\n",
-       "5             D-4     650 Harrison Avenue          Boston\n",
-       "6            D-14   301 Washington Street        Brighton\n",
-       "7             E-5      1708 Centre Street    West Roxbury\n",
-       "8            E-13  3347 Washington Street   Jamaica Plain\n",
-       "9            E-18   1249 Hyde Park Avenue       Hyde Park\n",
-       "10            A-1   40 New Sudbury Street     Charlestown\n",
-       "11           A-15   40 New Sudbury Street          Boston"
+       "0              A7         69 Paris Street     East Boston\n",
+       "1              B2  2400 Washington Street         Roxbury\n",
+       "2              B3   1165 Blue Hill Avenue        Mattapan\n",
+       "3              C6       101 West Broadway    South Boston\n",
+       "4             C11        40 Gibson Street      Dorchester\n",
+       "5              D4     650 Harrison Avenue          Boston\n",
+       "6             D14   301 Washington Street        Brighton\n",
+       "7              E5      1708 Centre Street    West Roxbury\n",
+       "8             E13  3347 Washington Street   Jamaica Plain\n",
+       "9             E18   1249 Hyde Park Avenue       Hyde Park\n",
+       "10             A1   40 New Sudbury Street     Charlestown\n",
+       "11            A15   40 New Sudbury Street          Boston"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1257,6 +1257,7 @@
    "source": [
     "dist_data_clean = pd.DataFrame()\n",
     "dist_data_clean['District_Codes'] =(dist_data['District Codes'].str.split(' ').str[1])\n",
+    "dist_data_clean['District_Codes2']=dist_data_clean['District_Codes'].str.split('-').str[0]+dist_data_clean['District_Codes'].str.split('-').str[1]\n",
     "dist_data_clean['District_Address'] =(dist_data['District Names'].str.split(',').str[0])\n",
     "dist_data_clean['District'] =(dist_data['District Names'].str.split(',').str[1])   \n",
     "# Clean up Dual Precinct for Boston/Charlestown\n",
@@ -1265,7 +1266,10 @@
     "dist_data_clean.at[11, 'District_Address'] = '40 New Sudbury Street'\n",
     "dist_data_clean.at[10, 'District'] = 'Charlestown'\n",
     "dist_data_clean.at[11, 'District'] = 'Boston'\n",
-    "dist_data_clean.at[11, 'District_Codes'] = 'A-15'\n",
+    "dist_data_clean.at[11, 'District_Codes'] = 'A15'\n",
+    "dist_data_clean.at[11, 'District_Codes2'] = 'A15'\n",
+    "dist_data_clean.drop(['District_Codes'], axis=1,inplace=True)\n",
+    "dist_data_clean.rename(columns={'District_Codes2':'District_Codes'},inplace=True)\n",
     "dist_data_clean"
    ]
   },
